# jb_tools

./: .gitignore  LICENSE.txt  Readme.md  environment.yml  print_version.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  write_version.py
jbscripts/: buildjb.py  watch_build.py
recipe/: meta.yaml
scripts/: run_all.py
src/jb_tools/: __init__.py  watch_build.py
src/jbscripts/: watch_build.py
tools_demo/: Readme_conda.md  environment.yml  requirements.txt
