[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0"
]
build-backend = 'setuptools.build_meta'

[project]
name = "jb_tools"
description = "jupyter-book utilities"
authors = [
  { name="Philip Austin", email="paustin@eoas.ubc.ca" },
]
dynamic = ["version"]   

dependencies = [
    'bz2file',
    'watchfiles',
    'setuptools_scm',
    'click'
]

[project.scripts]
  ebp-build = 'jb_tools.buildjb:main'
  ebp-watch = 'jb_tools.watch_build:main'

[tool.setuptools_scm]
write_to = "src/jb_tools/_version.py"
root = "."

