[metadata]
name = jb_tools
author = OCESE
author_email = phaustin@eoas.ub.ca
description = "jupyter-book tools"
url = https://github.com/phaustin/a301_2020
project_urls =
    Bug Tracker = https://github.com/phaustin/gradelib/issues
keywords='eoas ubc ocese',
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    bz2file
    watchfiles
    setuptools_scm
    click
python_requires = >=3.8
setup_requires =
    setuptools_scm
package_dir =
   = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  ebp-build = jbscripts.buildjb:main
  ebp-watch = jbscripts.watch_build:main


[bdist_wheel]
universal = 1


